@@ -955,12 +955,6 @@ test/intl402/DateTimeFormat/prototype/formatRange/en-US.js:
 test/intl402/DateTimeFormat/prototype/formatRange/fractionalSecondDigits.js:
   default: 'Test262Error: no fractionalSecondDigits Expected SameValue(«02:03 – 02:13», «02:03 – 02:13») to be true'
   strict mode: 'Test262Error: no fractionalSecondDigits Expected SameValue(«02:03 – 02:13», «02:03 – 02:13») to be true'
-test/intl402/DateTimeFormat/prototype/formatRangeToParts/en-US.js:
-  default: 'Test262Error: value for entry 5 Expected SameValue(« – », « – ») to be true'
-  strict mode: 'Test262Error: value for entry 5 Expected SameValue(« – », « – ») to be true'
-test/intl402/DateTimeFormat/prototype/formatRangeToParts/fractionalSecondDigits.js:
-  default: 'Test262Error: value for entry 3 Expected SameValue(« – », « – ») to be true'
-  strict mode: 'Test262Error: value for entry 3 Expected SameValue(« – », « – ») to be true'
 test/intl402/DateTimeFormat/prototype/resolvedOptions/hourCycle-default.js:
   default: 'Test262Error: Expected SameValue(«h24», «h23») to be true'
   strict mode: 'Test262Error: Expected SameValue(«h24», «h23») to be true'
