@@ -1,5 +1,16 @@
 2020-11-11  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Unreviewed, rebaseline test262's config.yaml
+
+        test262 bot is using Catalina, it should use Big Sur. filed in [1].
+
+        [1]: https://bugs.webkit.org/show_bug.cgi?id=218844
+
+        * test262/config.yaml:
+        * test262/expectations.yaml:
+
+2020-11-11  Yusuke Suzuki  <ysuzuki@apple.com>
+
         Unreviewed, fix wrong tests at the final clean up
         https://bugs.webkit.org/show_bug.cgi?id=213822
 
